--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
     "@tailwindcss/vite": "^4.0.15",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
